[gd_scene load_steps=6 format=3 uid="uid://df1cml07trhn3"]

[ext_resource type="Script" path="res://script/cards/token/lucky_box.gd" id="1_4xfhp"]
[ext_resource type="PackedScene" uid="uid://4gn77audskrs" path="res://scenes/component/attack_component.tscn" id="2_5wlvj"]
[ext_resource type="PackedScene" uid="uid://tahtsvfotixd" path="res://scenes/component/health_component.tscn" id="3_664fy"]
[ext_resource type="PackedScene" uid="uid://bx028wy2lu25i" path="res://scenes/component/outfit_component.tscn" id="4_c7ne7"]
[ext_resource type="Texture2D" uid="uid://b8xd2ikiq1kx" path="res://img/piece/standerd/token.png" id="5_sdu2s"]

[node name="LuckyBox" type="Node2D" node_paths=PackedStringArray("health_component", "attack_component", "outfit_component")]
script = ExtResource("1_4xfhp")
health_component = NodePath("HealthComponent")
attack_component = NodePath("AttackComponent")
outfit_component = NodePath("OutfitComponent")

[node name="AttackComponent" parent="." instance=ExtResource("2_5wlvj")]
DEFAULT_ATK = 0

[node name="HealthComponent" parent="." instance=ExtResource("3_664fy")]
DEAFULT_MAX_HEALTH = 1

[node name="OutfitComponent" parent="." instance=ExtResource("4_c7ne7")]
icon_texture = ExtResource("5_sdu2s")
frame = 1
